--- a/easy/叠盘子.md
+++ b/easy/叠盘子.md
@@ -46,6 +46,10 @@
 
 ## 思路
 
+题目要求每堆盘子的序号是不间断连续的，不妨对输入的数组进行遍历，除了第一个盘子外，对于第`i`个序号，如果第`i-1`个序号 +1 不等于该序号，即不连续，则对序号进行分组截断，可用一个数组`grouped`来记录分组
+
+由于还需要考虑每个组是否由至少3个组成，还需要重新整理下组别，对`grouped`进行遍历，如果长度小于3则将该组别拆开，最后返回正确答案
+
 ## 代码
 
 ```cpp
@@ -74,15 +78,38 @@ int main() {
 
 ```js
 function solution(plates) {
-  // Please write your code here
-  return -2;
+    // Please write your code here
+    let arr = plates.split(" ").map(Number);
+    let grouped = [[arr[0]]];
+    if (arr.length === 1) {
+        return plates;
+    }
+    for (let i = 1; i < arr.length; i++) {
+        if (arr[i] == arr[i - 1] + 1) {
+            grouped[grouped.length - 1].push(arr[i]);
+        } else {
+            grouped.push([arr[i]])
+        }
+    }
+    let result = []
+    for (let i = 0; i < grouped.length; i++) {
+        if (grouped[i].length >= 3) {
+            //console.log(grouped[i][0] + "-" + grouped[i][grouped[i].length - 1])
+            result.push(grouped[i][0] + "-" + grouped[i][grouped[i].length - 1]);
+        } else {
+            for (let j = 0; j < grouped[i].length; j++) {
+                result.push(grouped[i][j]);
+            }
+        }
+    }
+    return result.join(",");
 }
 
 function main() {
-  //  You can add more test cases here
-  console.log(solution("-3 -2 -1 2 10 15 16 18 19 20") === "-3--1,2,10,15,16,18-20");
-  console.log(solution("-6 -3 -2 -1 0 1 3 4 5 7 8 9 10 11 14 15 17 18 19 20") === "-6,-3-1,3-5,7-11,14,15,17-20");
-  console.log(solution("1 2 7 8 9 10 11 19") === "1,2,7-11,19");
+    //  You can add more test cases here
+    console.log(solution("-3 -2 -1 2 10 15 16 18 19 20") === "-3--1,2,10,15,16,18-20");
+    console.log(solution("-6 -3 -2 -1 0 1 3 4 5 7 8 9 10 11 14 15 17 18 19 20") === "-6,-3-1,3-5,7-11,14,15,17-20");
+    console.log(solution("1 2 7 8 9 10 11 19") === "1,2,7-11,19");
 }
 
 main();
