简单 - 和为偶数的数字组合 - 已解答JS

--- a/easy/和为偶数的数字组合.md
+++ b/easy/和为偶数的数字组合.md
@@ -36,6 +36,17 @@
 
 ## 思路
 
+此题难点为如何排列组合出所有的数字组合，由于无法确定传入数组的长度，故可使用递归函数进行排列组合
+
+具体可分为如下步骤：
+
+1. **分组**：
+   - 首先将输入的数字分成多组。
+2. **组合**：
+   - 对于每一种组合，检查从每组中取出一个数字组成的数字的各位数字之和是否为偶数。
+3. **计数**：
+   - 统计满足条件的组合方法的总数。
+
 ## 代码
 
 ```cpp
@@ -58,15 +69,44 @@ int main() {
 
 ```js
 function solution(numbers) {
-  // Please write your code here
-  return -1;
+    // 结果数组
+    let result = [];
+    
+    let count = 0;
+
+    // 递归函数，生成组合
+    function generateCombinations(current, index) {
+        if (index === numbers.length) {
+            // 如果已经遍历完所有数字，将当前组合加入结果数组
+            let combination = parseInt(current);
+            result.push(combination);
+            // 计算各位之和
+            let sum = current.split('').reduce((acc, digit) => acc + parseInt(digit), 0);
+            // 判断各位之和是否为偶数
+            if (sum % 2 === 0) {
+                count++;
+            }
+            return;
+        }
+
+        // 获取当前数字的每一位
+        let currentNumber = numbers[index].toString();
+        for (let i = 0; i < currentNumber.length; i++) {
+            // 递归调用，将当前数字的每一位与后面的数字进行组合
+            generateCombinations(current + currentNumber[i], index + 1);
+        }
+    }
+
+    // 从第一个数字开始生成组合
+    generateCombinations("", 0);
+    return count;
 }
 
 function main() {
-  // You can add more test cases here
-  console.log(solution([123, 456, 789]) === 14);
-  console.log(solution([123456789]) === 4);
-  console.log(solution([14329, 7568]) === 10);
+    // You can add more test cases here
+    console.log(solution([123, 456, 789]) === 14);
+    console.log(solution([123456789]) === 4);
+    console.log(solution([14329, 7568]) === 10);
 }
 
 main();
