困难 - 查找热点数据 - 已解答JS

--- a/hard/查找热点数据.md
+++ b/hard/查找热点数据.md
@@ -24,6 +24,14 @@
 
 ## 思路
 
+要解决这个问题，我们可以使用哈希表来统计每个元素的频率，然后使用最小堆（Min Heap）来维护前 `k` 个高频元素。最小堆的特性使得我们可以在 `O(log k)` 的时间内插入和删除元素，从而使得整个算法的时间复杂度优于 `O(n log n)`。
+
+### 步骤：
+
+1. **统计频率**：使用哈希表统计每个元素的频率。
+2. **构建最小堆**：遍历哈希表，将元素插入最小堆中。如果堆的大小超过 `k`，则移除堆顶元素（即频率最小的元素）。
+3. **提取结果**：从最小堆中提取前 `k` 个高频元素。
+
 ## 代码
 
 ```cpp
@@ -50,15 +58,106 @@ int main() {
 
 ```js
 function solution(nums, k) {
-  // Please write your code here
-  return -2;
-}
-
-function main() {
-  //  You can add more test cases here
-  console.log(solution([1, 1, 1, 2, 2, 3], 2) === "1,2");
-  console.log(solution([1], 1) === "1");
-}
-
-main();
+    // 统计频率
+    let frequencyMap = new Map();
+    for (let num of nums) {
+      frequencyMap.set(num, (frequencyMap.get(num) || 0) + 1);
+    }
+  
+    // 构建最小堆
+    let minHeap = new MinHeap();
+    for (let [num, freq] of frequencyMap) {
+      minHeap.insert([num, freq]);
+      if (minHeap.size() > k) {
+        minHeap.extractMin();
+      }
+    }
+  
+    // 提取结果
+    let result = [];
+    while (minHeap.size() > 0) {
+      result.push(minHeap.extractMin()[0]);
+    }
+  
+    // 将结果转换为字符串
+    console.log(result)
+    return result.join(",");
+  }
+  
+  class MinHeap {
+    constructor() {
+      this.heap = [];
+    }
+  
+    insert(val) {
+      this.heap.push(val);
+      this.bubbleUp(this.heap.length - 1);
+    }
+  
+    bubbleUp(index) {
+      while (index > 0) {
+        let parentIndex = Math.floor((index - 1) / 2);
+        if (this.heap[parentIndex][1] <= this.heap[index][1]) break;
+        [this.heap[parentIndex], this.heap[index]] = [this.heap[index], this.heap[parentIndex]];
+        index = parentIndex;
+      }
+    }
+  
+    extractMin() {
+      if (this.heap.length === 1) return this.heap.pop();
+      let min = this.heap[0];
+      this.heap[0] = this.heap.pop();
+      this.bubbleDown(0);
+      return min;
+    }
+  
+    bubbleDown(index) {
+      let left = 2 * index + 1;
+      let right = 2 * index + 2;
+      let smallest = index;
+      if (left < this.heap.length && this.heap[left][1] < this.heap[smallest][1]) {
+        smallest = left;
+      }
+      if (right < this.heap.length && this.heap[right][1] < this.heap[smallest][1]) {
+        smallest = right;
+      }
+      if (smallest !== index) {
+        [this.heap[smallest], this.heap[index]] = [this.heap[index], this.heap[smallest]];
+        this.bubbleDown(smallest);
+      }
+    }
+  
+    size() {
+      return this.heap.length;
+    }
+  
+    peek() {
+      return this.heap[0];
+    }
+  }
+  
+  function main() {
+    //  You can add more test cases here
+    console.log(solution([1, 1, 1, 2, 2, 3], 2) === "1,2");
+    console.log(solution([1], 1) === "1");
+  }
+  
+  main();
 ```
+
+## 代码分析
+
+这个算法的时间复杂度主要由以下几个部分组成：
+
+1. **统计频率**：遍历数组 `nums` 并构建频率映射 `frequencyMap`。这个操作的时间复杂度是 O(n)，其中 n 是数组 `nums` 的长度。
+2. **构建最小堆**：遍历频率映射 `frequencyMap`，并将每个元素插入最小堆中。每次插入操作的时间复杂度是 O(log k)，其中 k 是堆的大小。由于我们最多插入 k 个元素到堆中，因此这部分的总时间复杂度是 O(m log k)，其中 m 是 `frequencyMap` 的大小（即不同元素的数量）。在最坏情况下，m 可以等于 n，因此这部分的时间复杂度是 O(n log k)。
+3. **提取结果**：从最小堆中提取 k 个元素。每次提取操作的时间复杂度是 O(log k)，因此这部分的总时间复杂度是 O(k log k)。
+
+综合以上分析，算法的主要时间复杂度是 O(n log k)，其中 n 是数组 `nums` 的长度，k 是我们要找的频率最高的元素的数量。
+
+### 总结
+
+- **时间复杂度**：O(n log k)
+- **空间复杂度**：O(n)（用于存储频率映射和最小堆）
+
+这个算法在处理大规模数据时表现良好，尤其是当 k 远小于 n 时，时间复杂度接近 O(n)。
