--- a/hard/查找热点数据.md
+++ b/hard/查找热点数据.md
@@ -22,17 +22,19 @@
 
 # 解答
 
-## 思路
+## 法一
+
+### 思路
 
 要解决这个问题，我们可以使用哈希表来统计每个元素的频率，然后使用最小堆（Min Heap）来维护前 `k` 个高频元素。最小堆的特性使得我们可以在 `O(log k)` 的时间内插入和删除元素，从而使得整个算法的时间复杂度优于 `O(n log n)`。
 
-### 步骤：
+#### 步骤：
 
 1. **统计频率**：使用哈希表统计每个元素的频率。
 2. **构建最小堆**：遍历哈希表，将元素插入最小堆中。如果堆的大小超过 `k`，则移除堆顶元素（即频率最小的元素）。
 3. **提取结果**：从最小堆中提取前 `k` 个高频元素。
 
-## 代码
+### 代码
 
 ```cpp
 #include <iostream>
@@ -145,7 +147,7 @@ function solution(nums, k) {
   main();
 ```
 
-## 代码分析
+### 代码分析
 
 这个算法的时间复杂度主要由以下几个部分组成：
 
@@ -155,9 +157,73 @@ function solution(nums, k) {
 
 综合以上分析，算法的主要时间复杂度是 O(n log k)，其中 n 是数组 `nums` 的长度，k 是我们要找的频率最高的元素的数量。
 
-### 总结
+#### 总结
 
 - **时间复杂度**：O(n log k)
 - **空间复杂度**：O(n)（用于存储频率映射和最小堆）
 
 这个算法在处理大规模数据时表现良好，尤其是当 k 远小于 n 时，时间复杂度接近 O(n)。
+
+## 法二
+
+### 思路
+
+如果直接遍历数组并用哈希表记录频率，这个操作的时间复杂度是 O(n)，其中 n 是数组的长度。具体步骤如下：
+
+1. **遍历数组并记录频率**：
+   - 遍历数组 `nums`，对于每个元素，将其频率记录在哈希表中。
+   - 这个操作的时间复杂度是 O(n)，因为每个元素只需要常数时间来更新哈希表中的频率。
+2. **构建频率数组**：
+   - 将哈希表中的键值对（元素和频率）提取出来，形成一个频率数组。
+   - 这个操作的时间复杂度也是 O(n)，因为我们需要遍历哈希表中的所有键值对。
+3. **对频率数组进行排序**：
+   - 对频率数组按照频率进行排序。
+   - 排序的时间复杂度是 O(n log n)，这是因为在最坏情况下，频率数组的大小是 n。
+4. **提取前 k 个元素**：
+   - 从排序后的频率数组中提取前 k 个元素。
+   - 这个操作的时间复杂度是 O(k)，因为我们需要遍历前 k 个元素。
+
+### 代码
+
+```js
+function solution(nums, k) {
+    // 统计频率
+    let frequencyMap = new Map();
+    for (let num of nums) {
+        frequencyMap.set(num, (frequencyMap.get(num) || 0) + 1);
+    }
+
+    // 构建频率数组
+    let frequencyArray = Array.from(frequencyMap.entries());
+
+    // 对频率数组进行排序
+    frequencyArray.sort((a, b) => b[1] - a[1]);
+
+    // 提取前 k 个元素
+    let result = [];
+    for (let i = 0; i < k && i < frequencyArray.length; i++) {
+        result.push(frequencyArray[i][0]);
+    }
+
+    // 将结果转换为字符串
+    return result.join(",");
+}
+
+function main() {
+    //  You can add more test cases here
+    console.log(solution([1, 1, 1, 2, 2, 3], 2) === "1,2");
+    console.log(solution([1], 1) === "1");
+}
+
+main();
+```
+
+### 总结
+
+- **时间复杂度**：O(n log n)
+  - 遍历数组并记录频率：O(n)
+  - 构建频率数组：O(n)
+  - 对频率数组进行排序：O(n log n)
+  - 提取前 k 个元素：O(k)
+- **空间复杂度**：O(n)
+  - 用于存储哈希表和频率数组。
