--- a/easy/多米诺骨牌.md
+++ b/easy/多米诺骨牌.md
@@ -57,22 +57,47 @@ R....
 ## 代码
 
 ```cpp
-#include <iostream>
-#include <string>
-
-std::string solution(int num, std::string data) {
-    // Please write your code here
-    return "-2";
-}
-
-int main() {
-    //  You can add more test cases here
-    std::cout << (solution(14, ".L.R...LR..L..") == "4:3,6,13,14") << std::endl;
-    std::cout << (solution(5, "R....") == "0") << std::endl;
-    std::cout << (solution(1, ".") == "1:1") << std::endl;
-
-    return 0;
-}
+#include <bits/stdc++.h>
+using namespace std;
+struct node 
+{
+	int num;
+	char o;
+}a[3001];
+int main()
+{
+	char g;
+	int num1=1,k=1;
+	while(cin>>g)
+	{
+		if(g=='L'||g=='R')
+		{
+			a[k].num=num1;
+			a[k].o=g;
+			k++;
+		}
+		num1++;
+	}
+	a[k+1].o='R',a[0].o='L';
+	vector<int> b(1);
+	for(int i=1;i<=k;i++)
+	{
+		if(a[i].o=='L'&&a[i+1].o=='L')continue;
+		if(a[i].o=='L'&&a[i+1].o=='R')
+		{
+			while(a[i].num<a[i+1].num)
+			b.push_back(++a[i].num);
+		}
+		if(a[i].o=='R'&&a[i+1].o=='R')continue;
+		if(a[i].o=='R'&&a[i+1].o=='L')
+		{
+			if((a[i+1].num-a[i].num-1)%2==1)b.push_back((a[i+1].num+a[i].num)/2);
+		}
+	}
+	for(int i=1;i<=b.end();i++)
+	cout<<b[i]<<" ";
+	return 0;
+}   
 ```
 
 ```js
