--- a/easy/多米诺骨牌.md
+++ b/easy/多米诺骨牌.md
@@ -66,38 +66,57 @@ struct node
 }a[3001];
 int main()
 {
-	char g;
+	bool p=0;
+	int t;
 	int num1=1,k=1;
-	while(cin>>g)
+	while(cin>>t)
 	{
-		if(g=='L'||g=='R')
+//        cin>>t;
+		char g;
+		for(int i=0;i<t;i++)
 		{
-			a[k].num=num1;
-			a[k].o=g;
-			k++;
+			cin>>g;
+		    if(g=='L'||g=='R')
+	 		{
+				a[k].num=num1;
+				a[k].o=g;
+				k++;
+			}
+			num1++;
 		}
-		num1++;
 	}
-	a[k+1].o='R',a[0].o='L';
+	a[k].o='R',a[0].o='L';
+	a[k].num=t+1,a[0].num=0;
+//	for(int i=0;i<=k;i++)
+//	cout<<i<<" "<<a[i].o<<" "<<a[i].num<<endl;
 	vector<int> b(1);
-	for(int i=1;i<=k;i++)
+	for(int i=0;i<=k;i++)
 	{
 		if(a[i].o=='L'&&a[i+1].o=='L')continue;
-		if(a[i].o=='L'&&a[i+1].o=='R')
+		if(a[i].o=='L'&&a[i+1].o=='R'&&a[i].num+1!=a[i+1].num)
 		{
-			while(a[i].num<a[i+1].num)
+//			cout<<a[i].num<<"&";
+			while(a[i].num<a[i+1].num-1)
 			b.push_back(++a[i].num);
+			p=1;
 		}
 		if(a[i].o=='R'&&a[i+1].o=='R')continue;
 		if(a[i].o=='R'&&a[i+1].o=='L')
 		{
-			if((a[i+1].num-a[i].num-1)%2==1)b.push_back((a[i+1].num+a[i].num)/2);
+			if((a[i+1].num-a[i].num-1)%2==1)b.push_back((a[i+1].num+a[i].num)/2),p=1;
+//			,cout<<a[i+1].num<<" "<<a[i].num<<endl;
 		}
 	}
-	for(int i=1;i<=b.end();i++)
-	cout<<b[i]<<" ";
+	for(int value : b)
+	{
+		if(value!=0)
+		cout<<value<<" ";
+	}
+	if(p==0)
+	cout<<0;
 	return 0;
-}   
+}     
+
 ```
 
 ```js
