--- a/hard/进制求和转换.md
+++ b/hard/进制求和转换.md
@@ -29,23 +29,83 @@
 ## 代码
 
 ```cpp
-#include <iostream>
-#include <string>
-
-std::string solution(std::string binary1, std::string binary2) {
-    // Please write your code here
-    return "";
+#include <bits/stdc++.h>
+using namespace std;
+string addstring(string a, string b) {
+    int i = a.length() - 1;
+    int j = b.length() - 1;
+    int add = 0;
+    string s = "";
+    while (i >= 0 || j >= 0|| add != 0) {
+        if (i >= 0)
+            add = add + a[i--] - '0';
+        if (j >= 0)
+            add = add + b[j--] - '0';
+        s = s + to_string(add % 2);
+        add = add / 2;
+    }
+    reverse(s.begin(), s.end());
+//    cout<<s<<"%"<<endl;
+    return s;
 }
-
-int main() {
-    // You can add more test cases here
-    std::cout << (solution("101", "110") == "11") << std::endl;
-    std::cout << (solution("111111", "10100") == "83") << std::endl;
-    std::cout << (solution("111010101001001011", "100010101001") == "242420") << std::endl;
-    std::cout << (solution("111010101001011", "10010101001") == "31220") << std::endl;
-
-    return 0;
+string Fang(int x)
+{
+	if(x==0)return "1";
+	else
+	{
+		string y="1";
+		int add=0;
+		while(x--)
+		{
+			for(int i=y.size()-1;i>=0;i--)
+			{
+//				int add=0;
+cout<<(y[i]-'0')*2<<"*";
+				add=add+(y[i]-'0')*2;
+				cout<<add<<"*";
+				if(add>=10&&i>0)
+				{
+					y[i]=y[i]+add%10;
+					y[i-1]=y[i-1]+add/10;
+					add/=10;
+				}
+				else
+				{
+					if(add>=10)
+					{
+						y=y+to_string(add/10);
+					}
+					else 
+					{
+						y[i]=(char)add%10;
+						cout<<y[i]<<"#";
+					}
+				}
+//				cout<<y[i];
+			}
+		}
+		reverse(y.begin(),y.end());
+		return y;
+	}
 }
+string change(string c)
+{
+	for(int i=c.size()-1;i>=0;i--)
+	{
+//		string d;
+		cout<<c.size()-1-i<<" "<<Fang(c.size()-1-i)<<endl;
+//cout<<c[i];
+	}
+	return "0";
+}
+int main()
+{
+	string a,b,c;
+	cin>>a>>b;
+	c=addstring (a,b);
+	change(c);
+	return 0;
+ } 
 ```
 
 ```js
