--- a/hard/进制求和转换.md
+++ b/hard/进制求和转换.md
@@ -45,47 +45,35 @@ string addstring(string a, string b) {
         add = add / 2;
     }
     reverse(s.begin(), s.end());
-//    cout<<s<<"%"<<endl;
     return s;
 }
-string Fang(int x)
+void fang(int x)
 {
-	if(x==0)return "1";
-	else
+	vector<int> o(1);
+	if(x==0)o[0]=1;
+	else 
 	{
-		string y="1";
-		int add=0;
+		o[0]=1;
 		while(x--)
 		{
-			for(int i=y.size()-1;i>=0;i--)
+			for(size_t i = 0; i < o.size(); ++i)
 			{
-//				int add=0;
-cout<<(y[i]-'0')*2<<"*";
-				add=add+(y[i]-'0')*2;
-				cout<<add<<"*";
-				if(add>=10&&i>0)
+				int k=o[i]*2;
+				if(k>=10)
+				o[i]=k%10;
+				o[i+1]=k/10;
+				if(i==o.size()-1&&k>=10)
 				{
-					y[i]=y[i]+add%10;
-					y[i-1]=y[i-1]+add/10;
-					add/=10;
+					o.push_back(k/10);
+					o[i]=k%10;
+					break;
 				}
-				else
-				{
-					if(add>=10)
-					{
-						y=y+to_string(add/10);
-					}
-					else 
-					{
-						y[i]=(char)add%10;
-						cout<<y[i]<<"#";
-					}
-				}
-//				cout<<y[i];
 			}
 		}
-		reverse(y.begin(),y.end());
-		return y;
+		for(int value:o)
+		{
+			cout<<value;
+		}
 	}
 }
 string change(string c)
@@ -93,17 +81,18 @@ string change(string c)
 	for(int i=c.size()-1;i>=0;i--)
 	{
 //		string d;
-		cout<<c.size()-1-i<<" "<<Fang(c.size()-1-i)<<endl;
-//cout<<c[i];
+		if(c[i]=='1')
+		fang(c.size()-1-i);
+//		sumadd(d);
 	}
-	return "0";
 }
+
 int main()
 {
 	string a,b,c;
 	cin>>a>>b;
 	c=addstring (a,b);
-	change(c);
+	cout<<change(c);
 	return 0;
  } 
 ```
