--- a/hard/进制求和转换.md
+++ b/hard/进制求和转换.md
@@ -31,6 +31,11 @@
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
+//string opo="";
+//void sumadd(vector <int> o)
+//{
+//	 
+//}
 string addstring(string a, string b) {
     int i = a.length() - 1;
     int j = b.length() - 1;
@@ -59,21 +64,28 @@ void fang(int x)
 			for(size_t i = 0; i < o.size(); ++i)
 			{
 				int k=o[i]*2;
+//				cout<<k;
 				if(k>=10)
-				o[i]=k%10;
-				o[i+1]=k/10;
+				{
+					o[i]=k%10;
+					o[i+1]=k/10;
+				}
+				else o[i]=k%10;
 				if(i==o.size()-1&&k>=10)
 				{
 					o.push_back(k/10);
 					o[i]=k%10;
 					break;
 				}
+				cout<<o[i];
 			}
+			cout<<endl;
 		}
-		for(int value:o)
-		{
-			cout<<value;
-		}
+//		sumadd(vector<int> o);
+//		for(int value:o)
+//		{
+//			cout<<value;
+//		}
 	}
 }
 string change(string c)
@@ -83,18 +95,19 @@ string change(string c)
 //		string d;
 		if(c[i]=='1')
 		fang(c.size()-1-i);
-//		sumadd(d);
-	}
+//		sumadd(d);    
+    }
 }
 
 int main()
 {
 	string a,b,c;
 	cin>>a>>b;
-	c=addstring (a,b);
+	c=addstring(a,b);
+	cout<<c<<endl;
 	cout<<change(c);
 	return 0;
- } 
+}
 ```
 
 ```js
