--- a/hard/进制求和转换.md
+++ b/hard/进制求和转换.md
@@ -31,11 +31,11 @@
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
-//string opo="";
-//void sumadd(vector <int> o)
-//{
-//	 
-//}
+double sum;
+void sumadd(double add)
+{
+	sum+=add;
+}
 string addstring(string a, string b) {
     int i = a.length() - 1;
     int j = b.length() - 1;
@@ -54,48 +54,15 @@ string addstring(string a, string b) {
 }
 void fang(int x)
 {
-	vector<int> o(1);
-	if(x==0)o[0]=1;
-	else 
-	{
-		o[0]=1;
-		while(x--)
-		{
-			for(size_t i = 0; i < o.size(); ++i)
-			{
-				int k=o[i]*2;
-//				cout<<k;
-				if(k>=10)
-				{
-					o[i]=k%10;
-					o[i+1]=k/10;
-				}
-				else o[i]=k%10;
-				if(i==o.size()-1&&k>=10)
-				{
-					o.push_back(k/10);
-					o[i]=k%10;
-					break;
-				}
-				cout<<o[i];
-			}
-			cout<<endl;
-		}
-//		sumadd(vector<int> o);
-//		for(int value:o)
-//		{
-//			cout<<value;
-//		}
-	}
+		double add=pow(2,x);
+		sumadd(add);
 }
-string change(string c)
+void change(string c)
 {
 	for(int i=c.size()-1;i>=0;i--)
 	{
-//		string d;
 		if(c[i]=='1')
-		fang(c.size()-1-i);
-//		sumadd(d);    
+		fang(c.size()-1-i);    
     }
 }
 
@@ -105,9 +72,11 @@ int main()
 	cin>>a>>b;
 	c=addstring(a,b);
 	cout<<c<<endl;
-	cout<<change(c);
+	change(c);
+cout<<sum;
 	return 0;
 }
+
 ```
 
 ```js
