--- a/common/字符串有多少种可能性.md
+++ b/common/字符串有多少种可能性.md
@@ -27,20 +27,38 @@
 ## 代码
 
 ```cpp
-#include <iostream>
-
-int solution(int num) {
-    // Please write your code here
-    return 0;
-}
-
-int main() {
-    // You can add more test cases here
-    std::cout << (solution(12258) == 5) << std::endl;
-    std::cout << (solution(1400112) == 6) << std::endl;
-    std::cout << (solution(2110101) == 10) << std::endl;
-
-    return 0;
+#include <bits/stdc++.h>
+using namespace std;
+int dp[100001];
+int main()
+{
+	int num;
+	cin>>num;
+	string s=to_string(num);
+	for(int i=0;i<s.size();++i)
+	{
+//		cout<<i<<" ";
+		dp[i]=0;
+		if(i==0){
+			dp[i]=(s[i]=='0')?0:1;
+		}else{
+			if(s[i]!='0'){
+				dp[i]+=dp[i-1];
+			}
+			if(i>=1&&(s[i-1]=='1'||s[i-1]=='2')){
+				int val=(s[i-1]-'0')*10+s[i]-'0';
+				if(val<=26){
+					if(i==1){
+						dp[i]++;
+					}else{
+						dp[i]+=dp[i-2];
+					}
+				}
+			}
+		}
+	}
+	cout<<dp[s.size()-1];
+	return 0;
 }
 ```
 
