--- a/common/猫鱼分干.md
+++ b/common/猫鱼分干.md
@@ -45,19 +45,30 @@
 #include <iostream>
 #include <vector>
 
-int solution(int n, std::vector<int> catsLevels) {
-    // Please write your code here
-    return -1;
-}
-
-int main() {
-    std::vector<int> catsLevels1 = {1, 2, 2};
-    std::vector<int> catsLevels2 = {6, 5, 4, 3, 2, 16};
-    std::vector<int> catsLevels3 = {1, 2, 2, 3, 3, 20, 1, 2, 3, 3, 2, 1, 5, 6, 6, 5, 5, 7, 7, 4};
-    std::cout << (solution(3, catsLevels1) == 4) << std::endl;
-    std::cout << (solution(6, catsLevels2) == 17) << std::endl;
-    std::cout << (solution(20, catsLevels3) == 35) << std::endl;
-    return 0;
+#include <bits/stdc++.h>
+using namespace std;
+int main()
+{
+	ios::sync_with_stdio(false);
+	cin.tie(0);
+	int k=1,n,sum=0;
+	cin>>n;
+	vector<int> a(n);
+	for(int i=0;i<n;i++)
+	cin>>a[i];
+	vector<int> b(n,1);
+	while(a[k]<a[k-1])
+		k++;
+		for(int i=k-2;i>=0;i--)
+		b[i]=b[i+1]+1;
+	for(int i=0;i<n;i++)
+	{
+		if(i>=1&&a[i-1]<a[i])
+		b[i]=b[i-1]+1;
+		sum+=b[i];
+	}
+	cout<<sum;
+	return 0;
 }
 ```
 
