简单 - 创意标题匹配 - 已解答CPP

--- a/easy/创意标题匹配.md
+++ b/easy/创意标题匹配.md
@@ -37,18 +37,47 @@ Alice 和 Bob 进行一个游戏：
 ```cpp
 #include <iostream>
 #include <string>
+#include <vector>
+#include<regex>
+std::string solution(int n, std::string titleTemplate, std::vector<std::string> titles) {
+    //std::regex reg("");
+    std::string r;
+    for (int i = 0;i < titleTemplate.size();i++)
+    {
+        if (titleTemplate[i] == '{') {
+            while (titleTemplate[i] != '}') {
+                i++;
+            }
+            r += "(.*)";
+        }
+        else r += titleTemplate[i];
+    }
+    std::regex reg(r);
+    std::string result;
+    for (auto i : titles)
+    {
+        if(std::regex_match(i, reg))
+            result+="True,";
+        else  result += "False,";
+    }
+   
+   
+    
+    
 
-std::string solution(int n) {
-    // Please write your code here
-    return "-2";
+    //std::cout << result.substr(0, result.size() - 1);
+    return  result.substr(0, result.size() - 1);
 }
 
 int main() {
     //  You can add more test cases here
-    std::cout << (solution(2) == "0.50000") << std::endl;
-    std::cout << (solution(931) == "0.50054") << std::endl;
-    std::cout << (solution(924) == "0.50000") << std::endl;
-    std::cout << (solution(545) == "0.50092") << std::endl;
+    std::vector<std::string> testTitles1 = { "adcdcefdfeffe", "adcdcefdfeff", "dcdcefdfeffe", "adcdcfe" };
+    std::vector<std::string> testTitles2 = { "CLSomGhcQNvFuzENTAMLCqxBdj", "CLSomNvFuXTASzENTAMLCqxBdj", "CLSomFuXTASzExBdj", "CLSoQNvFuMLCqxBdj", "SovFuXTASzENTAMLCq", "mGhcQNvFuXTASzENTAMLCqx" };
+    std::vector<std::string> testTitles3 = { "abcdefg", "abefg", "efg" };
+
+    std::cout << (solution(4, "ad{xyz}cdc{y}f{x}e", testTitles1) == "True,False,False,True") << std::endl;
+    std::cout << (solution(6, "{xxx}h{cQ}N{vF}u{XTA}S{NTA}MLCq{yyy}", testTitles2) == "False,False,False,False,False,True") << std::endl;
+    std::cout << (solution(3, "a{bdc}efg", testTitles3) == "True,True,False") << std::endl;
 
     return 0;
 }
