easy - 创意标题匹配 - python

--- a/easy/创意标题匹配.md
+++ b/easy/创意标题匹配.md
@@ -99,3 +99,28 @@ function main() {
 
 main();
 ```
+
+```python
+def solution(n, title_template, titles):
+    r = ""
+    i = 0
+    while i < len(title_template):
+        if title_template[i] == '{':
+            while title_template[i] != '}':
+                i += 1
+            r += "(.*)"
+        else:
+            r += title_template[i]
+        i += 1
+
+    reg = re.compile(r)
+    result = []
+    for title in titles:
+        if re.fullmatch(reg, title):
+            result.append("True")
+        else:
+            result.append("False")
+    
+    return ",".join(result)
+```
+
