--- a/easy/叠盘子.md
+++ b/easy/叠盘子.md
@@ -114,3 +114,29 @@ function main() {
 
 main();
 ```
+
+```python
+def solution(plates: list[int], n: int) -> str:
+    if n == 0:
+        return ""
+    
+    result = []
+    i = 0
+    
+    while i < n:
+        start = i
+        while i + 1 < n and plates[i + 1] == plates[i] + 1:
+            i += 1
+        end = i
+        
+        if end - start >= 2:
+            result.append(f"{plates[start]}-{plates[end]}")
+        else:
+            for j in range(start, end + 1):
+                result.append(str(plates[j]))
+        
+        i += 1
+    
+    return ",".join(result)
+```
+
