easy - 多米诺骨牌 - Python

--- a/easy/多米诺骨牌.md
+++ b/easy/多米诺骨牌.md
@@ -163,3 +163,46 @@ function main() {
 
 main();
 ```
+
+```python
+def solution(num, data):
+    # 将字符串转换为列表以便于修改
+    dominoes = list(data)
+    n = len(dominoes)
+    
+    # 初始化一个标志，用于判断是否还有骨牌状态发生变化
+    changed = True
+    
+    while changed:
+        changed = False
+        new_dominoes = dominoes[:]
+        
+        for i in range(n):
+            if dominoes[i] == '.':
+                # 检查左侧骨牌
+                if i > 0 and dominoes[i - 1] == 'R' and (i == n - 1 or dominoes[i + 1] != 'L'):
+                    new_dominoes[i] = 'R'
+                    changed = True
+                # 检查右侧骨牌
+                elif i < n - 1 and dominoes[i + 1] == 'L' and (i == 0 or dominoes[i - 1] != 'R'):
+                    new_dominoes[i] = 'L'
+                    changed = True
+        
+        dominoes = new_dominoes
+    
+    # 统计仍然保持竖立的骨牌的数量和位置
+    standing_count = 0
+    standing_positions = []
+    
+    for i in range(n):
+        if dominoes[i] == '.':
+            standing_count += 1
+            standing_positions.append(i + 1)  # 位置从1开始计数
+    
+    if standing_count == 0:
+        return '0'
+    else:
+        positions_str = ','.join(map(str, standing_positions))
+        return f'{standing_count}:{positions_str}'
+```
+
