easy - 数字分组求偶数和 - Python

--- a/easy/和为偶数的数字组合.md
+++ b/easy/和为偶数的数字组合.md
@@ -111,3 +111,35 @@ function main() {
 
 main();
 ```
+
+```python
+def solution(numbers):
+    # 结果数组
+    result = []
+    count = 0
+
+    # 递归函数，生成组合
+    def generate_combinations(current, index):
+        nonlocal count
+        if index == len(numbers):
+            # 如果已经遍历完所有数字，将当前组合加入结果数组
+            combination = int(current)
+            result.append(combination)
+            # 计算各位之和
+            sum_digits = sum(int(digit) for digit in current)
+            # 判断各位之和是否为偶数
+            if sum_digits % 2 == 0:
+                count += 1
+            return
+
+        # 获取当前数字的每一位
+        current_number = str(numbers[index])
+        for i in range(len(current_number)):
+            # 递归调用，将当前数字的每一位与后面的数字进行组合
+            generate_combinations(current + current_number[i], index + 1)
+
+    # 从第一个数字开始生成组合
+    generate_combinations("", 0)
+    return count
+```
+
