--- a/easy/完美整数.md
+++ b/easy/完美整数.md
@@ -81,3 +81,20 @@ function main() {
 
 main();
 ```
+
+```python
+def solution(x, y):
+    count = 0  # 记录完美整数的数量
+
+    # 枚举从 1 到 9 的每一个基数
+    for digit in range(1, 10):
+        num = digit  # 当前完美整数
+        # 不断生成 1 位到 9 位的完美整数
+        while num <= y:
+            if num >= x:
+                count += 1  # 如果完美整数在 [x, y] 范围内，计数
+            num = num * 10 + digit  # 扩展生成下一位完美整数
+
+    return count
+```
+
