--- a/hard/查找热点数据.md
+++ b/hard/查找热点数据.md
@@ -227,3 +227,28 @@ main();
   - 提取前 k 个元素：O(k)
 - **空间复杂度**：O(n)
   - 用于存储哈希表和频率数组。
+
+```python
+def solution(nums, k):
+    from collections import defaultdict
+    
+    frequency = defaultdict(int)
+    for num in nums:
+        frequency[num] += 1
+    
+    bucket = [[] for _ in range(len(nums) + 1)]
+    for num, freq in frequency.items():
+        bucket[freq].append(num)
+    
+    result = []
+    for i in range(len(nums), 0, -1):
+        if bucket[i]:
+            result.extend(bucket[i])
+        if len(result) >= k:
+            break
+    
+    result = result[:k]
+    result.sort()
+    return result
+```
+
