--- a/common/猫鱼分干.md
+++ b/common/猫鱼分干.md
@@ -90,3 +90,24 @@ function main() {
 
 main();
 ```
+
+```python
+def solution(n, cats_levels):
+    # 初始化每只猫的鱼干数量为1
+    fish_count = [1] * n
+    
+    # 从左到右遍历，确保每只猫的鱼干数量满足条件
+    for i in range(1, n):
+        if cats_levels[i] > cats_levels[i - 1]:
+            fish_count[i] = fish_count[i - 1] + 1
+    
+    # 从右到左遍历，确保每只猫的鱼干数量满足条件
+    for i in range(n - 2, -1, -1):
+        if cats_levels[i] > cats_levels[i + 1]:
+            fish_count[i] = max(fish_count[i], fish_count[i + 1] + 1)
+    
+    # 计算总的鱼干数量
+    total_fish = sum(fish_count)
+    return total_fish
+```
+
